kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: finshield
  labels:
    name: finshield
    app: finshield
